# aems-agent

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  ci.yml
packaging/: aems-agent.spec  build.py
packaging/linux/: README.md
packaging/macos/: README.md
packaging/windows/: installer.nsi
src/aems_agent/: __init__.py  app.py  cli.py  config.py  device_id.py  license_enforcement.py  license_validation.py  routes.py  security.py  tray.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_device_id.py  test_license_enforcement.py  test_license_validation.py  test_routes.py  test_security.py
